<resources>
    <string name="app_name">RPS Streak</string>
    <string name="settings">設定</string>
    <string name="open_settings">設定を開く</string>
    <string name="dark_mode">ダークモード</string>
    <string name="language">言語</string>
    <string name="format_language">言語：%s</string>
    <string name="language_japanese">日本語</string>
    <string name="language_english">English</string>
    <string name="language_traditional_chinese">繁體中文</string>
    <string name="change_language">言語を変更</string>
    <string name="format_change_language_confirmation">言語を%sに切り替えますか？</string>
    <string name="apply">適用</string>
    <string name="reset_record">記録リセット</string>
    <string name="reset_record_confirmation">最高記録を0連勝に戻しますか？</string>
    <string name="cancel">キャンセル</string>
    <string name="reset">リセット</string>
    <string name="select_hand_prompt">手を選んでね</string>
    <string name="start">勝負！</string>
    <string name="next">次の戦い</string>
    <string name="cpu">CPUの手</string>
    <string name="hand_rock">グー</string>
    <string name="hand_scissors">チョキ</string>
    <string name="hand_paper">パー</string>
    <string name="default_message">何連勝できるかな？</string>
    <string name="countdown_jan">じゃん</string>
    <string name="countdown_ken">けん</string>
    <string name="countdown_pon">ぽん！</string>
    <string name="lose">あなたの負け</string>
    <string name="lose_close">惜しい！</string>
    <string name="draw">引き分け</string>
    <string name="draw_again">もう一回！</string>
    <string name="format_win_standard">あなたの勝ち！ %d連勝中</string>
    <string name="format_win_read">読み勝ち！ %d連勝中</string>
    <string name="format_best_streak">最高記録：%d連勝</string>
    <string name="format_best_streak_new">最高記録：%d連勝  NEW!</string>
    <string name="streak_title_beginner">初心者</string>
    <string name="streak_title_master">じゃんけん名人</string>
    <string name="streak_title_god_hand">神の手</string>
</resources>
